feat: Promoting/Demoting users
